tests/ui/form_data_unparsable.stderr
error[E0599]: the function or associated item `convert_value` exists for struct `MyType`, but its trait bounds were not satisfied
 --> $DIR/form_data_unparsable.rs:6:10
  |
4 | struct MyType;
  | --------------
  | |
  | function or associated item `convert_value` not found for this
  | doesn't satisfy `MyType: FromStr`
  | doesn't satisfy `_: gotham_formdata::conversion::ConvertFromStr<gotham_formdata::Error>`
5 |
6 | #[derive(FormData, Validate)]
  |          ^^^^^^^^ function or associated item cannot be called on `MyType` due to unsatisfied trait bounds
  |
  = note: the following trait bounds were not satisfied:
          `MyType: FromStr`
          which is required by `MyType: gotham_formdata::conversion::ConvertFromStr<gotham_formdata::Error>`
          `&MyType: FromStr`
          which is required by `&MyType: gotham_formdata::conversion::ConvertFromStr<gotham_formdata::Error>`
          `&mut MyType: FromStr`
          which is required by `&mut MyType: gotham_formdata::conversion::ConvertFromStr<gotham_formdata::Error>`
  = note: this error originates in the derive macro `FormData` (in Nightly builds, run with -Z macro-backtrace for more info)
